--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head><title>Family</tltle></head>
+	<head><title>Family</title></head>
 	<body>
 		<ol>
 			<li>U Tun Kyaw</li>
